name:                haskell-tools-backend-ghc
version:             1.1.0.0
synopsis:            Creating the Haskell-Tools AST from GHC's representations
description:         This package collects information from various representations of a Haskell program in GHC. Basically GHC provides us with the parsed, the renamed and the type checked representation of the program, if it was type correct. Each version contains different information. For example, the renamed AST contains the unique names of the definitions, however, template haskell splices are already resolved and thus missing from that version of the AST. To get the final representation we perform a transformation on the parsed and renamed representation, and then use the type checked one to look up the types of the names. The whole transformation is defined in the `Modules` module. Other modules define the functions that convert elements of the GHC AST to our AST.
homepage:            https://github.com/nboldi/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -O2
  exposed-modules:     Language.Haskell.Tools.BackendGHC
                     , Language.Haskell.Tools.BackendGHC.Modules
                     , Language.Haskell.Tools.BackendGHC.TH
                     , Language.Haskell.Tools.BackendGHC.Decls
                     , Language.Haskell.Tools.BackendGHC.Binds
                     , Language.Haskell.Tools.BackendGHC.Exprs
                     , Language.Haskell.Tools.BackendGHC.Stmts
                     , Language.Haskell.Tools.BackendGHC.Patterns
                     , Language.Haskell.Tools.BackendGHC.Types
                     , Language.Haskell.Tools.BackendGHC.Kinds
                     , Language.Haskell.Tools.BackendGHC.Literals
                     , Language.Haskell.Tools.BackendGHC.Names
                     , Language.Haskell.Tools.BackendGHC.GHCUtils
  other-modules:       Language.Haskell.Tools.BackendGHC.Monad
                     , Language.Haskell.Tools.BackendGHC.Utils
                     , Language.Haskell.Tools.BackendGHC.SourceMap
                     , Language.Haskell.Tools.BackendGHC.AddTypeInfo

  build-depends:       base              >= 4.11  && < 4.12
                     , transformers      >= 0.5  && < 0.6
                     , references        >= 0.3  && < 0.4
                     , bytestring        >= 0.10 && < 0.11
                     , safe              >= 0.3  && < 0.4
                     , uniplate          >= 1.6  && < 1.7
                     , containers        >= 0.5  && < 0.6
                     , mtl               >= 2.2  && < 2.3
                     , split             >= 0.2  && < 0.3
                     , template-haskell  >= 2.13 && < 2.14
                     , ghc               >= 8.4  && < 8.5
                     , haskell-tools-ast >= 1.1  && < 1.2
                     , ghc-boot-th       >= 8.4  && < 8.5
  default-language:    Haskell2010
