name:                haskell-tools-cli
version:             0.4.1.3
synopsis:            Command-line frontend for Haskell-tools Refact
description:         Command-line frontend for Haskell-tools Refact. Not meant as a final product, only for demonstration purposes.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/CppHs/Language/Preprocessor/*.hs
                  , examples/CppHs/Language/Preprocessor/Cpphs/*.hs
                  , bench-tests/*.txt
                  , examples/Project/has-cabal/*.hs
                  , examples/Project/has-cabal/*.cabal
                  , examples/Project/multi-packages/package1/*.hs
                  , examples/Project/multi-packages/package1/*.cabal
                  , examples/Project/multi-packages/package2/*.hs
                  , examples/Project/multi-packages/package2/*.cabal
                  , examples/Project/multi-packages-flags/package1/*.hs
                  , examples/Project/multi-packages-flags/package1/*.cabal
                  , examples/Project/multi-packages-flags/package2/*.hs
                  , examples/Project/multi-packages-flags/package2/*.cabal
                  , examples/Project/multi-packages-same-module/package1/*.hs
                  , examples/Project/multi-packages-same-module/package1/*.cabal
                  , examples/Project/multi-packages-same-module/package2/*.hs
                  , examples/Project/multi-packages-same-module/package2/*.cabal
                  , examples/Project/no-cabal/*.hs
                  , examples/Project/reloading/*.hs
                  , examples/Project/selection/*.hs
                  , examples/Project/source-dir/*.cabal
                  , examples/Project/source-dir/src/*.hs
                  , examples/Project/source-dir-outside/*.cabal
                  , examples/Project/src/*.hs

library
  ghc-options:         -O2
  build-depends:       base                      >= 4.9 && < 4.10
                     , containers                >= 0.5 && < 0.6
                     , mtl                       >= 2.2 && < 2.3
                     , split                     >= 0.2 && < 0.3
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2
                     , ghc                       >= 8.0 && < 8.1
                     , ghc-paths                 >= 0.1 && < 0.2
                     , references                >= 0.3 && < 0.4
                     , haskell-tools-ast         >= 0.4 && < 0.5
                     , haskell-tools-prettyprint >= 0.4 && < 0.5
                     , haskell-tools-refactor    >= 0.4 && < 0.5
  exposed-modules:     Language.Haskell.Tools.Refactor.CLI
  default-language:    Haskell2010


executable ht-refact
  ghc-options:         -O2
  build-depends:       base                      >= 4.9 && < 4.10
                     , haskell-tools-cli         >= 0.4 && < 0.5
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  
test-suite haskell-tools-cli-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g -O2
  hs-source-dirs:      test
  main-is:             Main.hs  
  build-depends:       base                      >= 4.9 && < 4.10
                     , tasty                     >= 0.11 && < 0.12
                     , tasty-hunit               >= 0.9 && < 0.10
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , haskell-tools-cli         >= 0.4 && < 0.5
                     , knob                      >= 0.1 && < 0.2
                     , bytestring                >= 0.10 && < 0.11
  default-language:    Haskell2010

benchmark cli-benchmark
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g -O2
  build-depends:       base                      >= 4.9 && < 4.10
                     , haskell-tools-cli         >= 0.4 && < 0.5
                     , criterion                 >= 1.1 && < 1.2
                     , time                      >= 1.6 && < 1.7
                     , aeson                     >= 1.0 && < 1.1
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , knob                      >= 0.1 && < 0.2
                     , bytestring                >= 0.10 && < 0.11
                     , split                     >= 0.2 && < 0.3
  hs-source-dirs:      benchmark
  main-is:             Main.hs  


