name:                haskell-tools-cli
version:             0.7.0.0
synopsis:            Command-line frontend for Haskell-tools Refact
description:         Command-line frontend for Haskell-tools Refact. Not meant as a final product, only for demonstration purposes.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/CppHs/Language/Preprocessor/*.hs
                  , examples/CppHs/Language/Preprocessor/Cpphs/*.hs
                  , bench-tests/*.txt
                  , examples/Project/cpp-opt/*.hs
                  , examples/Project/cpp-opt/*.cabal
                  , examples/Project/has-cabal/*.hs
                  , examples/Project/has-cabal/*.cabal
                  , examples/Project/multi-packages/package1/*.hs
                  , examples/Project/multi-packages/package1/*.cabal
                  , examples/Project/multi-packages/package2/*.hs
                  , examples/Project/multi-packages/package2/*.cabal
                  , examples/Project/multi-packages-flags/package1/*.hs
                  , examples/Project/multi-packages-flags/package1/*.cabal
                  , examples/Project/multi-packages-flags/package2/*.hs
                  , examples/Project/multi-packages-flags/package2/*.cabal
                  , examples/Project/multi-packages-same-module/package1/*.hs
                  , examples/Project/multi-packages-same-module/package1/*.cabal
                  , examples/Project/multi-packages-same-module/package2/*.hs
                  , examples/Project/multi-packages-same-module/package2/*.cabal
                  , examples/Project/no-cabal/*.hs
                  , examples/Project/reloading/*.hs
                  , examples/Project/selection/*.hs
                  , examples/Project/source-dir/*.cabal
                  , examples/Project/source-dir/src/*.hs
                  , examples/Project/source-dir-outside/*.cabal
                  , examples/Project/working-dir/src/*.hs
                  , examples/Project/working-dir/*.cabal
                  , examples/Project/working-dir/*.txt
                  , examples/Project/with-main/*.hs
                  , examples/Project/with-main/*.cabal
                  , examples/Project/with-main-renamed/*.hs
                  , examples/Project/with-main-renamed/*.cabal
                  , examples/Project/with-multi-main/*.hs
                  , examples/Project/with-multi-main/*.cabal
                  , examples/Project/src/*.hs

library
  build-depends:       base                      >= 4.9 && < 4.10
                     , containers                >= 0.5 && < 0.6
                     , mtl                       >= 2.2 && < 2.3
                     , split                     >= 0.2 && < 0.3
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2
                     , ghc                       >= 8.0 && < 8.1
                     , ghc-paths                 >= 0.1 && < 0.2
                     , references                >= 0.3 && < 0.4
                     , strict                    >= 0.3 && < 0.4
                     , haskell-tools-ast         >= 0.7 && < 0.8
                     , haskell-tools-prettyprint >= 0.7 && < 0.8
                     , haskell-tools-refactor    >= 0.7 && < 0.8
  exposed-modules:     Language.Haskell.Tools.Refactor.CLI
  default-language:    Haskell2010


executable ht-refact
  ghc-options:         -rtsopts
  build-depends:       base                      >= 4.9 && < 4.10
                     , haskell-tools-cli         >= 0.7 && < 0.8
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010

executable ht-test-stackage
  build-depends:       base                      >= 4.9 && < 4.10
                     , directory                 >= 1.2 && < 1.4
                     , process                   >= 1.4 && < 1.5
                     , split                     >= 0.2 && < 0.3
  ghc-options:         -threaded -with-rtsopts=-M4g
  hs-source-dirs:      test-stackage
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite haskell-tools-cli-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base                      >= 4.9 && < 4.10
                     , tasty                     >= 0.11 && < 0.12
                     , tasty-hunit               >= 0.9 && < 0.10
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , haskell-tools-cli         >= 0.7 && < 0.8
                     , knob                      >= 0.1 && < 0.2
                     , bytestring                >= 0.10 && < 0.11
  default-language:    Haskell2010

benchmark cli-benchmark
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  build-depends:       base                      >= 4.9 && < 4.10
                     , haskell-tools-cli         >= 0.7 && < 0.8
                     , criterion                 >= 1.1 && < 1.2
                     , time                      >= 1.6 && < 1.7
                     , aeson                     >= 1.0 && < 1.3
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , knob                      >= 0.1 && < 0.2
                     , bytestring                >= 0.10 && < 0.11
                     , split                     >= 0.2 && < 0.3
  hs-source-dirs:      benchmark
  main-is:             Main.hs
