name:                haskell-tools-cli
version:             1.1.0.1
synopsis:            Command-line frontend for Haskell-tools Refact
description:         Command-line frontend for Haskell-tools Refact. Not meant as a final product, only for demonstration purposes.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/example-project/*.hs
                  , examples/CppHs/Language/Preprocessor/*.hs
                  , examples/CppHs/Language/Preprocessor/Cpphs/*.hs

library
  build-depends:       base                      >= 4.11 && < 4.12
                     , containers                >= 0.5 && < 0.6
                     , mtl                       >= 2.2 && < 2.3
                     , split                     >= 0.2 && < 0.3
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2
                     , ghc                       >= 8.4 && < 8.5
                     , ghc-paths                 >= 0.1 && < 0.2
                     , references                >= 0.3 && < 0.4
                     , strict                    >= 0.3 && < 0.4
                     , haskell-tools-refactor    >= 1.1 && < 1.2
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
                     , haskell-tools-daemon      >= 1.1 && < 1.2
  exposed-modules:     Language.Haskell.Tools.Refactor.CLI
                     , Paths_haskell_tools_cli
  default-language:    Haskell2010


executable ht-refact
  ghc-options:         -rtsopts
  build-depends:       base                      >= 4.11 && < 4.12
                     , split                     >= 0.2 && < 0.3
                     , mtl                       >= 2.2 && < 2.3
                     , directory                 >= 1.2  && < 1.4
                     , filepath                  >= 1.4  && < 2.0
                     , optparse-applicative      >= 0.14 && < 0.15
                     , haskell-tools-cli
                     , haskell-tools-daemon      >= 1.1 && < 1.2
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite haskell-tools-cli-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base                      >= 4.11 && < 4.12
                     , tasty                     >= 0.11 && < 1.1
                     , tasty-hunit               >= 0.9 && < 0.11
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , knob                      >= 0.1 && < 0.2
                     , bytestring                >= 0.10 && < 0.11
                     , haskell-tools-cli
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
  default-language:    Haskell2010

executable ht-test-stackage
  build-depends:       base                      >= 4.11 && < 4.12
                     , directory                 >= 1.2 && < 1.4
                     , process                   >= 1.6 && < 1.7
                     , split                     >= 0.2 && < 0.3
                     , filepath                  >= 1.4 && < 2.0
                     , optparse-applicative      >= 0.14 && < 0.15
                     , Glob                      >= 0.9 && < 0.10
  ghc-options:         -threaded
  hs-source-dirs:      test-stackage
  main-is:             Main.hs
  default-language:    Haskell2010

benchmark cli-benchmark
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  build-depends:       base                      >= 4.11 && < 4.12
                     , criterion                 >= 1.1 && < 1.5
                     , time                      >= 1.6 && < 1.9
                     , aeson                     >= 1.0 && < 1.5
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , knob                      >= 0.1 && < 0.2
                     , bytestring                >= 0.10 && < 0.11
                     , split                     >= 0.2 && < 0.3
                     , haskell-tools-cli
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
                     , haskell-tools-daemon      >= 1.1 && < 1.2
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  default-language:    Haskell2010
