name:                haskell-tools-daemon
version:             0.4.1.0
synopsis:            Background process for Haskell-tools refactor that editors can connect to.
description:         Background process for Haskell-tools refactor that editors can connect to.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -O2
  build-depends:       base                      >= 4.9   && < 5.0
                     , aeson                     >= 1.0  && < 1.1
                     , bytestring                >= 0.10  && < 1.0
                     , filepath                  >= 1.4   && < 2.0
                     , containers                >= 0.5   && < 0.6
                     , mtl                       >= 2.2   && < 2.3
                     , split                     >= 0.2   && < 1.0
                     , directory                 >= 1.2   && < 1.3
                     , ghc                       >= 8.0   && < 8.1
                     , ghc-paths                 >= 0.1   && < 0.2
                     , references                >= 0.3.2 && < 1.0
                     , network                   >= 2.6   && < 3.0
                     , haskell-tools-ast         >= 0.4   && < 0.5
                     , haskell-tools-prettyprint >= 0.4   && < 0.5
                     , haskell-tools-refactor    >= 0.4   && < 0.5
  exposed-modules:     Language.Haskell.Tools.Refactor.Daemon
                     , Language.Haskell.Tools.Refactor.Daemon.State
  default-language:    Haskell2010


executable ht-daemon
  ghc-options:         -O2
  build-depends:       base                      >= 4.9 && < 5.0
                     , haskell-tools-daemon      >= 0.4 && < 0.5
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite haskell-tools-daemon-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g -O2
  hs-source-dirs:      test
  main-is:             Main.hs  
  build-depends:       base                      >= 4.9  && < 4.10
                     , HUnit                     >= 1.5  && < 1.6
                     , tasty                     >= 0.11 && < 0.12
                     , tasty-hunit               >= 0.9  && < 0.10
                     , directory                 >= 1.2  && < 1.3
                     , filepath                  >= 1.4  && < 2.0
                     , bytestring                >= 0.10 && < 0.11
                     , network                   >= 2.6  && < 2.7
                     , aeson                     >= 1.0 && < 1.1
                     , haskell-tools-daemon      >= 0.4  && < 0.5
  default-language:    Haskell2010