name:                haskell-tools-daemon
version:             0.4.1.1
synopsis:            Background process for Haskell-tools refactor that editors can connect to.
description:         Background process for Haskell-tools refactor that editors can connect to.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/Project/has-cabal/*.hs
                  , examples/Project/has-cabal/*.cabal
                  , examples/Project/changing-cabal/*.hs
                  , examples/Project/changing-cabal/*.cabal
                  , examples/Project/has-th/*.hs
                  , examples/Project/hs-boots/*.hs
                  , examples/Project/hs-boots/*.hs-boot
                  , examples/Project/multi-packages/package1/*.hs
                  , examples/Project/multi-packages/package1/*.cabal
                  , examples/Project/multi-packages/package2/*.hs
                  , examples/Project/multi-packages/package2/*.cabal
                  , examples/Project/multi-packages-dependent/package1/*.hs
                  , examples/Project/multi-packages-dependent/package1/*.cabal
                  , examples/Project/multi-packages-dependent/package2/*.hs
                  , examples/Project/multi-packages-dependent/package2/*.cabal
                  , examples/Project/multi-packages-flags/package1/*.hs
                  , examples/Project/multi-packages-flags/package1/*.cabal
                  , examples/Project/multi-packages-flags/package2/*.hs
                  , examples/Project/multi-packages-flags/package2/*.cabal
                  , examples/Project/multi-packages-same-module/package1/*.hs
                  , examples/Project/multi-packages-same-module/package1/*.cabal
                  , examples/Project/multi-packages-same-module/package2/*.hs
                  , examples/Project/multi-packages-same-module/package2/*.cabal
                  , examples/Project/no-cabal/*.hs
                  , examples/Project/reloading/*.hs
                  , examples/Project/selection/*.hs
                  , examples/Project/simple-refactor/*.hs
                  , examples/Project/simple-refactor/*.cabal
                  , examples/Project/source-dir/*.cabal
                  , examples/Project/source-dir/src/*.hs
                  , examples/Project/source-dir-outside/*.cabal
                  , examples/Project/src/*.hs
                  , examples/Project/th-added-later/package1/*.hs
                  , examples/Project/th-added-later/package1/*.cabal
                  , examples/Project/th-added-later/package2/*.hs
                  , examples/Project/th-added-later/package2/*.cabal

library
  ghc-options:         -O2
  build-depends:       base                      >= 4.9   && < 5.0
                     , aeson                     >= 1.0  && < 1.1
                     , bytestring                >= 0.10  && < 1.0
                     , filepath                  >= 1.4   && < 2.0
                     , containers                >= 0.5   && < 0.6
                     , mtl                       >= 2.2   && < 2.3
                     , split                     >= 0.2   && < 1.0
                     , directory                 >= 1.2   && < 1.3
                     , ghc                       >= 8.0   && < 8.1
                     , ghc-paths                 >= 0.1   && < 0.2
                     , references                >= 0.3.2 && < 1.0
                     , network                   >= 2.6   && < 3.0
                     , haskell-tools-ast         >= 0.4   && < 0.5
                     , haskell-tools-prettyprint >= 0.4   && < 0.5
                     , haskell-tools-refactor    >= 0.4   && < 0.5
  exposed-modules:     Language.Haskell.Tools.Refactor.Daemon
                     , Language.Haskell.Tools.Refactor.Daemon.State
  default-language:    Haskell2010


executable ht-daemon
  ghc-options:         -O2
  build-depends:       base                      >= 4.9 && < 5.0
                     , haskell-tools-daemon      >= 0.4 && < 0.5
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite haskell-tools-daemon-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2.5g -O2
  hs-source-dirs:      test
  main-is:             Main.hs  
  build-depends:       base                      >= 4.9  && < 4.10
                     , HUnit                     >= 1.5  && < 1.6
                     , tasty                     >= 0.11 && < 0.12
                     , tasty-hunit               >= 0.9  && < 0.10
                     , directory                 >= 1.2  && < 1.3
                     , filepath                  >= 1.4  && < 2.0
                     , bytestring                >= 0.10 && < 0.11
                     , network                   >= 2.6  && < 2.7
                     , aeson                     >= 1.0 && < 1.1
                     , haskell-tools-daemon      >= 0.4  && < 0.5
  default-language:    Haskell2010